// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CSelect renders in custom icon in \`icon\` slot. 1`] = `
<DocumentFragment>
  <div
    aria-label="Select Food"
    class="chakra-42b2qy"
  >
    <select
      aria-label="Select Food"
      class="chakra-select chakra-1wd2nhn"
    >
      <option
        value=""
      >
        Select an option
      </option>
      <option
        value="a"
      >
        A
      </option>
      <option
        value="b"
      >
        B
      </option>
      <option
        value="c"
      >
        C
      </option>
    </select>
    <div
      class="chakra-select__icon-wrapper chakra-1hbwrp4"
    >
      <svg
        class="chakra-icon chakra-13otjrl"
        focusable="false"
        viewBox="0 0 32 32"
      >
        <g
          data-testid="custom-icon"
          fill="none"
        >
          <path
            d="M15.999 29.998c9.334 0 13.999-6.268 13.999-14c0-7.73-4.665-13.998-14-13.998C6.665 2 2 8.268 2 15.999c0 7.731 4.664 13.999 13.999 13.999Z"
            fill="url(#f463id0)"
          />
          <path
            d="M15.999 29.998c9.334 0 13.999-6.268 13.999-14c0-7.73-4.665-13.998-14-13.998C6.665 2 2 8.268 2 15.999c0 7.731 4.664 13.999 13.999 13.999Z"
            fill="url(#f463id1)"
          />
          <path
            d="M15.999 29.998c9.334 0 13.999-6.268 13.999-14c0-7.73-4.665-13.998-14-13.998C6.665 2 2 8.268 2 15.999c0 7.731 4.664 13.999 13.999 13.999Z"
            fill="url(#f463id2)"
          />
          <path
            d="M15.999 29.998c9.334 0 13.999-6.268 13.999-14c0-7.73-4.665-13.998-14-13.998C6.665 2 2 8.268 2 15.999c0 7.731 4.664 13.999 13.999 13.999Z"
            fill="url(#f463id3)"
            fill-opacity=".6"
          />
          <path
            d="M15.999 29.998c9.334 0 13.999-6.268 13.999-14c0-7.73-4.665-13.998-14-13.998C6.665 2 2 8.268 2 15.999c0 7.731 4.664 13.999 13.999 13.999Z"
            fill="url(#f463id4)"
          />
          <path
            d="M15.999 29.998c9.334 0 13.999-6.268 13.999-14c0-7.73-4.665-13.998-14-13.998C6.665 2 2 8.268 2 15.999c0 7.731 4.664 13.999 13.999 13.999Z"
            fill="url(#f463id5)"
          />
          <path
            d="M15.999 29.998c9.334 0 13.999-6.268 13.999-14c0-7.73-4.665-13.998-14-13.998C6.665 2 2 8.268 2 15.999c0 7.731 4.664 13.999 13.999 13.999Z"
            fill="url(#f463id6)"
          />
          <path
            d="M15.999 29.998c9.334 0 13.999-6.268 13.999-14c0-7.73-4.665-13.998-14-13.998C6.665 2 2 8.268 2 15.999c0 7.731 4.664 13.999 13.999 13.999Z"
            fill="url(#f463id7)"
          />
          <g
            filter="url(#f463idb)"
            opacity=".5"
          >
            <path
              d="M7.5 11.5s.25-2 2.5-2s2.5 2 2.5 2"
              stroke="#9A4609"
              stroke-linecap="round"
              stroke-width="2"
            />
          </g>
          <g
            filter="url(#f463idc)"
            opacity=".5"
          >
            <path
              d="M18.5 11.5s.5-2 2.5-2s2.5 2 2.5 2"
              stroke="#9A4609"
              stroke-linecap="round"
              stroke-width="2"
            />
          </g>
          <path
            d="M8 11s.25-2 2.5-2s2.5 2 2.5 2"
            stroke="#43273B"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          />
          <g
            filter="url(#f463idd)"
            opacity=".26"
          >
            <path
              d="M8.25 10.75s.25-2 2.5-2s2.5 2 2.5 2"
              stroke="#fff"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width=".75"
            />
          </g>
          <path
            d="M19 11s.5-2 2.5-2s2.5 2 2.5 2"
            stroke="#43273B"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
          />
          <g
            filter="url(#f463ide)"
            opacity=".26"
          >
            <path
              d="M19.25 10.75s.25-2 2.5-2s2.5 2 2.5 2"
              stroke="#fff"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width=".75"
            />
          </g>
          <path
            d="M11.62 18.5h6.48l5.4 3l-3.78 8L10 26l1.62-7.5Z"
            fill="url(#f463id8)"
          />
          <path
            d="M18.368 22.368L15.5 19.5l8-3.5l.955 2.292a3.734 3.734 0 0 1-6.087 4.076Z"
            fill="url(#f463idf)"
          />
          <path
            d="M9 16c.5.667 2.5 2.5 7 2.5s6.5-1.833 7-2.5"
            stroke="url(#f463id9)"
            stroke-linecap="round"
            stroke-width="2"
          />
          <path
            clip-rule="evenodd"
            d="m18.175 22.175l.193.193a3.734 3.734 0 0 0 6.087-4.076l-.267-.641A3.981 3.981 0 0 0 22 17c-.424 0-.832.066-1.215.188l-.756.33a3.999 3.999 0 0 0-1.854 4.657Z"
            fill="url(#f463ida)"
            fill-rule="evenodd"
          />
          <defs>
            <radialgradient
              cx="0"
              cy="0"
              gradientTransform="rotate(132.839 10.786 10.065) scale(37.5033)"
              gradientUnits="userSpaceOnUse"
              id="f463id0"
              r="1"
            >
              <stop
                stop-color="#FFF478"
              />
              <stop
                offset=".475"
                stop-color="#FFB02E"
              />
              <stop
                offset="1"
                stop-color="#F70A8D"
              />
            </radialgradient>
            <radialgradient
              cx="0"
              cy="0"
              gradientTransform="rotate(131.878 10.74 10.193) scale(38.9487)"
              gradientUnits="userSpaceOnUse"
              id="f463id1"
              r="1"
            >
              <stop
                stop-color="#FFF478"
              />
              <stop
                offset=".475"
                stop-color="#FFB02E"
              />
              <stop
                offset="1"
                stop-color="#F70A8D"
              />
            </radialgradient>
            <radialgradient
              cx="0"
              cy="0"
              gradientTransform="rotate(101.31 2.876 12.808) scale(17.8466 22.8581)"
              gradientUnits="userSpaceOnUse"
              id="f463id2"
              r="1"
            >
              <stop
                offset=".788"
                stop-color="#F59639"
                stop-opacity="0"
              />
              <stop
                offset=".973"
                stop-color="#FF7DCE"
              />
            </radialgradient>
            <radialgradient
              cx="0"
              cy="0"
              gradientTransform="matrix(-29 29 -29 -29 18 14)"
              gradientUnits="userSpaceOnUse"
              id="f463id3"
              r="1"
            >
              <stop
                offset=".315"
                stop-opacity="0"
              />
              <stop
                offset="1"
              />
            </radialgradient>
            <radialgradient
              cx="0"
              cy="0"
              gradientTransform="rotate(77.692 -2.555 18.434) scale(28.1469)"
              gradientUnits="userSpaceOnUse"
              id="f463id4"
              r="1"
            >
              <stop
                offset=".508"
                stop-color="#7D6133"
                stop-opacity="0"
              />
              <stop
                offset="1"
                stop-color="#715B32"
              />
            </radialgradient>
            <radialgradient
              cx="0"
              cy="0"
              gradientTransform="matrix(7.5 10.99996 -7.97335 5.4364 16.5 16.5)"
              gradientUnits="userSpaceOnUse"
              id="f463id5"
              r="1"
            >
              <stop
                stop-color="#FFB849"
              />
              <stop
                offset="1"
                stop-color="#FFB847"
                stop-opacity="0"
              />
            </radialgradient>
            <radialgradient
              cx="0"
              cy="0"
              gradientTransform="matrix(11.49998 2 -2 11.49998 20.5 18)"
              gradientUnits="userSpaceOnUse"
              id="f463id6"
              r="1"
            >
              <stop
                stop-color="#FFA64B"
              />
              <stop
                offset=".9"
                stop-color="#FFAE46"
                stop-opacity="0"
              />
            </radialgradient>
            <radialgradient
              cx="0"
              cy="0"
              gradientTransform="rotate(43.971 -9.827 29.173) scale(59.0529)"
              gradientUnits="userSpaceOnUse"
              id="f463id7"
              r="1"
            >
              <stop
                offset=".185"
                stop-opacity="0"
              />
              <stop
                offset="1"
                stop-opacity=".4"
              />
            </radialgradient>
            <radialgradient
              cx="0"
              cy="0"
              gradientTransform="rotate(129.007 5.449 13.952) scale(7.72137 5.2163)"
              gradientUnits="userSpaceOnUse"
              id="f463id8"
              r="1"
            >
              <stop
                stop-color="#F63711"
              />
              <stop
                offset="1"
                stop-color="#E24A2C"
                stop-opacity="0"
              />
            </radialgradient>
            <radialgradient
              cx="0"
              cy="0"
              gradientTransform="matrix(0 6 -9.18387 0 16 14)"
              gradientUnits="userSpaceOnUse"
              id="f463id9"
              r="1"
            >
              <stop
                offset=".518"
                stop-color="#4E2553"
              />
              <stop
                offset=".703"
                stop-color="#5B4852"
              />
              <stop
                offset="1"
                stop-color="#4E2553"
              />
              <stop
                offset="1"
                stop-color="#4E2553"
              />
            </radialgradient>
            <radialgradient
              cx="0"
              cy="0"
              gradientTransform="matrix(1.33333 2 -6 4 22.667 21)"
              gradientUnits="userSpaceOnUse"
              id="f463ida"
              r="1"
            >
              <stop
                stop-color="#FF7291"
              />
              <stop
                offset="1"
                stop-color="#FF7291"
                stop-opacity="0"
              />
            </radialgradient>
            <filter
              color-interpolation-filters="sRGB"
              filterUnits="userSpaceOnUse"
              height="7"
              id="f463idb"
              width="10"
              x="5"
              y="7"
            >
              <feflood
                flood-opacity="0"
                result="BackgroundImageFix"
              />
              <feblend
                in="SourceGraphic"
                in2="BackgroundImageFix"
                result="shape"
              />
              <fegaussianblur
                result="effect1_foregroundBlur_31_15"
                stdDeviation=".75"
              />
            </filter>
            <filter
              color-interpolation-filters="sRGB"
              filterUnits="userSpaceOnUse"
              height="7"
              id="f463idc"
              width="10.001"
              x="16"
              y="7"
            >
              <feflood
                flood-opacity="0"
                result="BackgroundImageFix"
              />
              <feblend
                in="SourceGraphic"
                in2="BackgroundImageFix"
                result="shape"
              />
              <fegaussianblur
                result="effect1_foregroundBlur_31_15"
                stdDeviation=".75"
              />
            </filter>
            <filter
              color-interpolation-filters="sRGB"
              filterUnits="userSpaceOnUse"
              height="5.75"
              id="f463idd"
              width="8.75"
              x="6.375"
              y="6.875"
            >
              <feflood
                flood-opacity="0"
                result="BackgroundImageFix"
              />
              <feblend
                in="SourceGraphic"
                in2="BackgroundImageFix"
                result="shape"
              />
              <fegaussianblur
                result="effect1_foregroundBlur_31_15"
                stdDeviation=".75"
              />
            </filter>
            <filter
              color-interpolation-filters="sRGB"
              filterUnits="userSpaceOnUse"
              height="5.75"
              id="f463ide"
              width="8.75"
              x="17.375"
              y="6.875"
            >
              <feflood
                flood-opacity="0"
                result="BackgroundImageFix"
              />
              <feblend
                in="SourceGraphic"
                in2="BackgroundImageFix"
                result="shape"
              />
              <fegaussianblur
                result="effect1_foregroundBlur_31_15"
                stdDeviation=".75"
              />
            </filter>
            <lineargradient
              gradientUnits="userSpaceOnUse"
              id="f463idf"
              x1="23.5"
              x2="20.383"
              y1="22.5"
              y2="16.006"
            >
              <stop
                stop-color="#D40F31"
              />
              <stop
                offset=".341"
                stop-color="#FF2375"
              />
              <stop
                offset="1"
                stop-color="#FF278E"
              />
            </lineargradient>
          </defs>
        </g>
      </svg>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CSelect renders in disabled state if wrapped by CFormControl with isDisabled true 1`] = `
<DocumentFragment>
  <div
    class="chakra-form chakra-1kxonj9"
    role="group"
  >
    <div
      class="chakra-42b2qy"
    >
      <select
        class="chakra-select chakra-1wd2nhn"
        disabled=""
        id="form"
        readonly="false"
      >
        <option
          value=""
        >
          Select an option
        </option>
        <!---->
      </select>
      <div
        class="chakra-select__icon-wrapper chakra-1hbwrp4"
        data-disabled="true"
        disabled="true"
        id="form"
        readonly="false"
        required="false"
      >
        <svg
          aria-hidden="true"
          class="chakra-select__icon"
          role="presentation"
          style="width: 1em; height: 1em; color: currentColor;"
          viewBox="0 0 24 24"
        >
          <path
            d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
            fill="currentColor"
          />
        </svg>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CSelect should render properly 1`] = `
<DocumentFragment>
  <div
    class="chakra-42b2qy"
  >
    <select
      class="chakra-select chakra-1wd2nhn"
    >
      <!---->
      <!---->
    </select>
    <div
      class="chakra-select__icon-wrapper chakra-1hbwrp4"
    >
      <svg
        aria-hidden="true"
        class="chakra-select__icon"
        role="presentation"
        style="width: 1em; height: 1em; color: currentColor;"
        viewBox="0 0 24 24"
      >
        <path
          d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
          fill="currentColor"
        />
      </svg>
    </div>
  </div>
</DocumentFragment>
`;
